starting order Data analysis

--- a/thoughts.ipynb
+++ b/thoughts.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,26 +95,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Make Requests\n",
-    "Now that we have all the items in a neat list, let us make requests to get the information"
+    "## Get Order Information\n",
+    "Now that we have all the items in a neat list, let us make requests to get the information and save it to the folder(im limiting this to 10 as of right now, as i dont want to cause stress on the api while learning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_id(dictionary, target_id):\n",
-    "    for key, value in dictionary.items():\n",
-    "        if key == 'id' and value == target_id:\n",
-    "            return dictionary\n",
-    "        elif isinstance(value, dict):\n",
-    "            result = find_id(value, target_id)\n",
-    "            if result is not None:\n",
-    "                return result\n",
-    "    return None"
+    "# for item in item_urls[:10]:\n",
+    "#     wf.get_order_info(item)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Order info from files\n",
+    "i want to:\n",
+    "- load all orders for each item, one item at a time\n",
+    "- from there get all buy values \n",
+    "\n",
+    "\n",
+    "structure of information\n",
+    "\n",
+    "dictionary\n",
+    "{\n",
+    "- item url\n",
+    "  - list of item prices\n",
+    "  - dictionary of sources\n",
+    "    - missions\n",
+    "      - mission name\n",
+    "        - drop rate\n",
+    "    - enemy \n",
+    "      - enemy name\n",
+    "        - drop rate\n",
+    "    - location \n",
+    "      - plant name\n",
+    "        - mission\n",
+    "          - drop rate\n",
+    "    - \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
