working on drop sources

--- a/thoughts.ipynb
+++ b/thoughts.ipynb
@@ -124,21 +124,25 @@
     "\n",
     "dictionary\n",
     "{\n",
-    "- item url\n",
-    "  - list of item prices\n",
-    "  - dictionary of sources\n",
-    "    - missions\n",
-    "      - mission name\n",
-    "        - drop rate\n",
+    "- item_url\n",
+    "- {\n",
+    "  - 2d list of item prices format: [[price, online/offline]]\n",
+    "  - median online price (top 5 online offers) : X\n",
+    "  - 1d list of top 5 online offers : [prices]\n",
+    "  - median price (of top 15 total offers) : X\n",
+    "  - dictionary of sources:\n",
+    "    - missions \n",
+    "      - mission_name\n",
+    "        - drop_rate\n",
     "    - enemy \n",
-    "      - enemy name\n",
-    "        - drop rate\n",
+    "      - enemy_name\n",
+    "        - drop_rate\n",
     "    - location \n",
-    "      - plant name\n",
-    "        - mission\n",
-    "          - drop rate\n",
-    "    - \n",
-    "}"
+    "      - planet_name\n",
+    "        - mission_name\n",
+    "          - drop_rate\n",
+    "- }  \n",
+    "- }"
    ]
   },
   {
