--- a/thoughts.ipynb
+++ b/thoughts.ipynb
@@ -3176,21 +3176,21 @@
     }
    ],
    "source": [
-    "import datetime\n",
-    "previous_time = None\n",
+    "# import datetime\n",
+    "# previous_time = None\n",
     "\n",
-    "for item in item_urls:\n",
-    "    wf.get_drop_sources_from_web(item)\n",
-    "    current_time = datetime.datetime.now()\n",
-    "    formatted_time = current_time.strftime(\"%H:%M:%S:%f\")\n",
-    "    formatted_date = current_time.strftime(\"%d %b %Y\")\n",
-    "    output = \"{} - {}\".format(formatted_time, formatted_date)\n",
-    "    if previous_time:\n",
-    "        time_difference = current_time - previous_time\n",
-    "        print(f\"{output} \\t {time_difference}\")\n",
-    "    else:\n",
-    "        print(output)\n",
-    "    previous_time = current_time\n"
+    "# for item in item_urls:\n",
+    "#     wf.get_drop_sources_from_web(item)\n",
+    "#     current_time = datetime.datetime.now()\n",
+    "#     formatted_time = current_time.strftime(\"%H:%M:%S:%f\")\n",
+    "#     formatted_date = current_time.strftime(\"%d %b %Y\")\n",
+    "#     output = \"{} - {}\".format(formatted_time, formatted_date)\n",
+    "#     if previous_time:\n",
+    "#         time_difference = current_time - previous_time\n",
+    "#         print(f\"{output} \\t {time_difference}\")\n",
+    "#     else:\n",
+    "#         print(output)\n",
+    "#     previous_time = current_time\n"
    ]
   },
   {
@@ -3245,7 +3245,18 @@
     "        - mission_name\n",
     "          - drop_rate\n",
     "- }  \n",
-    "- }"
+    "- }\n",
+    "\n",
+    "\n",
+    "relics \n",
+    "dear god this one will be a pain in the derriere \n",
+    "\n",
+    "\n",
+    "so for each relic we have to:\n",
+    "- grab all the contents\n",
+    "- grab their price\n",
+    "- grab the weighted average of each relic\n",
+    "- repeat for intact, exceptional, flawless and radiant relics (':\n"
    ]
   },
   {
