--- a/thoughts.ipynb
+++ b/thoughts.ipynb
@@ -3187,7 +3187,7 @@
     "#     output = \"{} - {}\".format(formatted_time, formatted_date)\n",
     "#     if previous_time:\n",
     "#         time_difference = current_time - previous_time\n",
-    "#         print(f\"{output} \\t {time_difference}\")\n",
+    "#         print(f\"{output} \\t {time_difference} \\t {item}\")\n",
     "#     else:\n",
     "#         print(output)\n",
     "#     previous_time = current_time\n"
@@ -3256,27 +3256,21 @@
     "- grab all the contents\n",
     "- grab their price\n",
     "- grab the weighted average of each relic\n",
-    "- repeat for intact, exceptional, flawless and radiant relics (':\n"
+    "- repeat for intact, exceptional, flawless and radiant relics (':\n",
+    "\n",
+    "\n",
+    "\n",
+    "ill want different means of information\n",
+    "\n",
+    "Parts solo\n",
+    "Sets\n",
+    "Mods\n",
+    "\n",
+    "\n",
+    "displayed in different tabs like so \n",
+    "\n",
+    "<img src=\"dreams_of_css.png\" alt=\"Alt Text\" width=\"600\" height=\"400\">\n"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
